Fix white space in caption

--- a/src/scss/partials/_chat.scss
+++ b/src/scss/partials/_chat.scss
@@ -127,7 +127,6 @@ $chat-helper-size: 36px;
 		resize: none;
 		border: none;
 		outline: none;
-		white-space: pre-wrap;
 		font-size: var(--messages-text-size);
 		line-height: var(--line-height);
 
